--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
   ],
   "dependencies": {
     "jquery": "~3.1.0",
-    "angular": "~1.5.8"
+    "angular": "~1.5.8",
+    "jquery.easing": "~1.3.1"
   },
   "devDependencies": {
     "breakpoint-sass": "~2.7.0",
